--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,1 +1,5 @@
 <p>This is the profile view.</p>
+<div ng-controller="ProfileCtrl">
+  <p>First Name: {{settings.firstName}}</p>
+  <p>{{errmsg}}</p>
+</div>
