Register page added

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -32,7 +32,7 @@
                         Log in</button>
                     </form>
             </div>
-            <a href="#/persons" class="text-center new-account">Create an account </a>
+            <a href="#/register" class="text-center new-account">Create an account </a>
     </div>
             <div ng-show="logged">
                 <button class="btn btn-danger" ng-click="logout()">Logout</button>
