View your profile

--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,5 +1,7 @@
 <p>This is the profile view.</p>
-<div ng-controller="ProfileCtrl">
-  <p>First Name: {{settings.firstName}}</p>
-  <p>{{errmsg}}</p>
-</div>
+<h1>Profielgegevens voor: {{username}}</h1>
+<p>Voornaam: {{firstName}}</p>
+<p>Achternaam: {{lastName}}</p>
+<p>Geslacht: {{gender}}</p>
+<p>Geboortedatum: {{birthDate}}</p>
+<p>Inschrijvingsdatum: {{enrolmentDate}}</p>
