Added Authentication, Clean code in AngularJS, roles added

--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -5,3 +5,4 @@
 <p>Geslacht: {{gender}}</p>
 <p>Geboortedatum: {{birthDate}}</p>
 <p>Inschrijvingsdatum: {{enrolmentDate}}</p>
+<button ng-hide="isAdmin" ng-click="makeAdmin()">Upgrade to Admin!</button>
