--- a/app/styles/dashboard.css
+++ b/app/styles/dashboard.css
@@ -93,6 +93,10 @@ body {
     max-width: 330px;
     padding: 15px;
     margin: 0 auto;
+
+}
+.login{
+    float:left;
 }
 .form-signin .form-signin-heading, .form-signin .checkbox
 {
