--- a/app/views/skills.html
+++ b/app/views/skills.html
@@ -1,6 +1,8 @@
 <h1>Skills</h1>
 <hr>
 <h3>Filter</h3>
+
+
 <div class="row">
   <div class="col-xs-6">
     <input ng-model="search.name" type="text" class="form-control" id="nameSearch"
@@ -9,6 +11,7 @@
 </div>
 <hr>
 <h3>List</h3>
+
 <div class="row">
   <div class="col-lg-6">
     <table class="table table-hover table-striped table-bordered">
@@ -35,7 +38,8 @@
           </td>
           <td>
             <input id="skillCategory" class="form-control"
-                   ng-model="skill.category" typeahead-no-results="noResults" typeahead="category as category.name for category in skillCategories() | filter:$viewValue | limitTo:8"/>
+                   ng-model="skill.category" typeahead-no-results="noResults"
+                   typeahead="category as category.name for category in skillCategories() | filter:$viewValue | limitTo:8"/>
           </td>
           <td>
             <button type="button" id="skillSubmit" class="btn btn-default" ng-click="save(skill)">Add</button>
