--- a/app/views/persons.html
+++ b/app/views/persons.html
@@ -85,6 +85,14 @@
                 Customer {{$index + 1}}: {{selectedPersonsCustomer.name}} ({{selectedPersonsCustomer.description}}) <button ng-click="deleteCustomerFromPerson(selectedPerson, selectedPersonsCustomer)">Delete customer</button>
               </p>
 
+              <div>
+                <h4>BUM's from person</h4>
+                <hr>
+                <p ng-repeat="selectedPersonsBum in selectedPersonsBums">
+                  BUM {{$index + 1}}: {{selectedPersonsBum.firstName}} {{selectedPersonsBum.lastName}} from {{selectedPersonsBum.unit}}
+                </p>
+              </div>
+
               <h4>Update Details</h4>
               <hr>
               <div class="slide">
@@ -100,19 +108,25 @@
               </dl>
               </div>
 
-              <h4>Add Role to {{selectedPerson.firstName}} {{selectedPerson.lastName}}</h4>
+              <h4>Assign Role to {{selectedPerson.firstName}} {{selectedPerson.lastName}}</h4>
               <hr>
               <select ng-model="selectedRole" name="selectRole">
                 <option ng-repeat="functionalRole in allFunctionalRoles" value="{{functionalRole.name}}">{{functionalRole.name}}</option>
               </select>
-              <button ng-click="addFunctionalRoleToPerson()">Add role</button>
+              <button ng-click="addFunctionalRoleToPerson()">Assign role</button>
 
-              <h4>Add Customer to {{selectedPerson.firstName}} {{selectedPerson.lastName}}</h4>
+              <h4>Assign Customer to {{selectedPerson.firstName}} {{selectedPerson.lastName}}</h4>
               <hr>
               <select ng-model="selectedCustomer" name="selectCustomer">
                 <option ng-repeat="customer in allCustomers" value="{{customer}}">{{customer.name}}</option>
               </select>
-              <button ng-click="addCustomerToPerson()">Add customer</button>
+              <button ng-click="addCustomerToPerson()">Assign customer</button>
+
+              <div ng-if="isBum">
+                <h4>Assign this employee to me (bum)</h4>
+                <hr>
+                <button ng-click="addBumToPerson(selectedPerson)">Assign this employee to me (bum)</button>
+              </div>
 
               <h4>Other Info</h4>
               <hr>
