--- a/app/views/persons.html
+++ b/app/views/persons.html
@@ -93,6 +93,14 @@
                 </p>
               </div>
 
+              <div>
+                <h4>CL's from person</h4>
+                <hr>
+                <p ng-repeat="selectedPersonsCL in selectedPersonsCLs">
+                  CL {{$index + 1}}: {{selectedPersonsCL.firstName}} {{selectedPersonsCL.lastName}} from {{selectedPersonsCL.unit}}
+                </p>
+              </div>
+
               <h4>Update Details</h4>
               <hr>
               <div class="slide">
@@ -126,6 +134,12 @@
                 <h4>Assign this employee to me (bum)</h4>
                 <hr>
                 <button ng-click="addBumToPerson(selectedPerson)">Assign this employee to me (bum)</button>
+              </div>
+
+              <div ng-if="isCL">
+                <h4>Assign this employee to me (competence leader)</h4>
+                <hr>
+                <button ng-click="addCompetenceLeaderToPerson(selectedPerson)">Assign this employee to me (CL)</button>
               </div>
 
               <h4>Other Info</h4>
