--- a/app/views/persons.html
+++ b/app/views/persons.html
@@ -109,6 +109,14 @@
                 </p>
               </div>
 
+              <div>
+                <h4>Coaches from person</h4>
+                <hr>
+                <p ng-repeat="selectedPersonsCoach in selectedPersonsCoaches">
+                  Coach {{$index + 1}}: {{selectedPersonsCoach.firstName}} {{selectedPersonsCoach.lastName}} from {{selectedPersonsCoach.unit}}
+                </p>
+              </div>
+
               <div ng-if="isAdmin">
                 <h4>Update Details</h4>
                 <hr>
@@ -157,6 +165,12 @@
                 <h4>Assign this employee to me (practice manager)</h4>
                 <hr>
                 <button ng-click="addPracticeManagerToPerson(selectedPerson)">Assign this employee to me (PM)</button>
+              </div>
+
+              <div ng-if="isCoach">
+                <h4>Assign this employee to me (coach)</h4>
+                <hr>
+                <button ng-click="addCoachToPerson(selectedPerson)">Assign this employee to me (coach)</button>
               </div>
             </div>
         </div>
