--- a/app/views/skillCompetences.html
+++ b/app/views/skillCompetences.html
@@ -1,21 +1,51 @@
-<h1>Skills</h1>
+<h1>SkillCompetences</h1>
 <hr>
-<h3>Filter</h3>
-<div class="col-lg-6">
-  <table class="table table-hover table-striped table-bordered">
-    <thead>
-    <tr>
-      <th>Name</th>
-      <th>Category</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr ng-repeat="skill in skills" ng-click="setSelected(skill)">
-      <td>{{skill.name}}</td>
-      <td>{{skill.category.name}}</td>
-    </tr>
+<h4>De skills van {{person.firstName}} {{person.lastName}}</h4>
+<div class="row">
 
-    </tbody>
-  </table>
+  <div class="col-lg-6">
+    <table class="table table-hover table-striped table-bordered">
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>Competence Level</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr ng-repeat="skillCompetence in skillCompetences | filter:search" ng-click="setSelected(skill)">
+        <td>{{skillCompetence.skill.name}}</td>
+        <td>{{skillCompetence.competenceLevel}}</td>
+        <td ng-click="remove(skillCompetence._links.self.href)">Delete</td>
+      </tr>
+      <tr>
+        <form name="addForm">
+
+          <td>
+            <input id="skill" class="form-control"
+                   ng-model="skillCompetence.skill" typeahead-no-results="noResults" typeahead-editable="false"
+                   typeahead="skill as skill.name for skill in skills | filter:$viewValue | limitTo:8"
+                   placeholder="Skill"/>
+
+
+          </td>
+          <td>
+
+            <input name="competenceLevel" ng-model="skillCompetence.competenceLevel" placeholder="Competence Level"
+                   id="competenceLevel" class="form-control" type="number">
+
+          </td>
+          <td>
+
+            <button class="btn btn-default" ng-click="save(skillCompetence)">Add</button>
+
+          </td>
+        </form>
+
+      </tr>
+
+      </tbody>
+    </table>
+  </div>
+</div>
 </div>
 
