--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -2,13 +2,13 @@
 <hr>
 <div class="row">
   <div class="col-xs-6">
-    <button type="button" class="btn btn-primary" ng-click="modalPasswordReset()">Reset password</button>
+    <button type="button" class="btn btn-primary" ng-click="modalPasswordChange()">Change password</button>
   </div>
 </div>
 
-<script type="text/ng-template" id="passwordResetModalContent">
+<script type="text/ng-template" id="passwordChangeModalContent">
   <div class="modal-header">
-    <h3 class="modal-title">Reset password</h3>
+    <h3 class="modal-title">Change password</h3>
   </div>
 
   <div class="modal-body">
@@ -22,7 +22,7 @@
       Current password is not correct!
     </div>
 
-    <form name="formResetPassword">
+    <form name="formChangePassword">
       <div class="form-group">
         <label for="oldPassword">Current password:</label>
         <input type="password" id="oldPassword" ng-model="password.oldPassword" placeholder="Old password" class="form-control" required/>
@@ -30,20 +30,20 @@
       <div class="form-group">
         <label for="newPassword">New password:</label>
         <input type="password" id="newPassword" name="newPassword" ng-model="password.newPassword" ng-minlength="6" ng-maxlength="18" required placeholder="New password" class="form-control"/>
-        <p ng-show="formResetPassword.newPassword.$touched && formResetPassword.newPassword.$error.minlength">Your password is required to be at least 6 characters</p>
-        <p ng-show="formResetPassword.newPassword.$touched && formResetPassword.newPassword.$error.maxlength">Your password cannot be longer than 18 characters</p>
+        <p ng-show="formChangePassword.newPassword.$touched && formChangePassword.newPassword.$error.minlength">Your password is required to be at least 6 characters</p>
+        <p ng-show="formChangePassword.newPassword.$touched && formChangePassword.newPassword.$error.maxlength">Your password cannot be longer than 18 characters</p>
       </div>
       <div class="form-group">
         <label for="newPasswordConfirm">Confirm new password:</label>
         <input type="password" id="newPasswordConfirm" name="newPasswordConfirm" ng-model="password.newPasswordConfirm" required pw-check="newPassword" placeholder="Confirm new password" class="form-control" />
-        <p ng-show="formResetPassword.$error"> <span class="msg-error" ng-show="formResetPassword.newPasswordConfirm.$error.pwmatch">Passwords don't match.</span></p>
+        <p ng-show="formChangePassword.$error"> <span class="msg-error" ng-show="formChangePassword.newPasswordConfirm.$error.pwmatch">Passwords don't match.</span></p>
       </div>
     </form>
 
   </div>
 
   <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="resetPassword(password)" ng-disabled="formResetPassword.$invalid">Save</button>
+    <button class="btn btn-primary" ng-click="changePassword(password)" ng-disabled="formChangePassword.$invalid">Save</button>
     <button class="btn btn-warning" ng-click="cancelModal()">Cancel</button>
   </div>
 </script>
