--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -6,7 +6,7 @@
 <p>Inschrijvingsdatum: {{enrolmentDate}}</p>
 <button ng-hide="isAdmin" ng-click="makeAdmin()">Upgrade to Admin!</button>
 
-<div ng-if="isBum || isCL || isPM || isCoach">
+<div ng-show="isBum || isCompetenceLeader || isPracticeManager || isCoach">
   <h4>My users</h4>
   <hr>
   <p ng-repeat="myUser in myUsers">
