--- a/app/views/roles.html
+++ b/app/views/roles.html
@@ -1,22 +1,15 @@
-
-
-
-
-<div id="legend">
-            <legend class="">Choose a side...</legend>
-        </div>
-
+<h4>Role Details</h4>
+<hr>
+<!--<p ng-repeat="selectedPersonsApplicationRole in selectedPersonsApplicationRoles">
+  Application role {{$index + 1}}: {{selectedPersonsApplicationRole}}
+</p>-->
+<p ng-repeat="role in roles">
+  Functional role {{$index + 1}}: {{role.name}}
+  <button ng-click="deleteRole(role._links.self.href)">Delete role</button>
+</p>
 
 
 <div>
-    <form name="myForm">
-        <label > Roles: </label>
-        <select name="selectroles" ng-model="role.selected">
-            <option ng-repeat="role in roles" value="{{role.name}}">{{role.name}}</option>
-        </select>
-
-        <button class="btn btn-primary" ng-click="addSelected(role.selected)">Choose!</button>
-    </form>
     <hr>
 </div>
 
