--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,15 +1,124 @@
-<h1>Profielgegevens voor: {{username}}</h1>
-<p>Voornaam: {{firstName}}</p>
-<p>Achternaam: {{lastName}}</p>
-<p>Geslacht: {{gender}}</p>
-<p>Geboortedatum: {{birthDate}}</p>
-<p>Inschrijvingsdatum: {{enrolmentDate}}</p>
-<button ng-hide="isAdmin" ng-click="makeAdmin()">Upgrade to Admin!</button>
+<div>
+  <h1>My profile</h1>
+  <hr>
+  <div>
+    <h4>Details</h4>
+    <hr>
+    <dl class="dl-horizontal">
+      <dt>Active</dt>
+      <dd><input type="checkbox" ng-model="myProfile.active" disabled/></dd>
+      <dt>Photo</dt>
+      <dd><img src="https://s3.amazonaws.com/codecademy-blog/assets/f3a16fb6.jpg" alt="Profile picture"></dd>
+      <dt>First name</dt>
+      <dd>{{myProfile.firstName}}</dd>
+      <dt>Last name</dt>
+      <dd>{{myProfile.lastName}}</dd>
+      <dt>Gender</dt>
+      <dd>{{myProfile.gender}}</dd>
+      <dt>Birth date</dt>
+      <dd>{{myProfile.birthDate}}</dd>
+      <dt>Address</dt>
+      <dd>{{myProfile.address}}</dd>
+      <dt>Unit</dt>
+      <dd>{{myProfile.unit}}</dd>
+      <dt>Enrollment date</dt>
+      <dd>{{myProfile.enrollmentDate}}</dd>
+      <dt>Contact information</dt>
+      <dd>{{myProfile.contactInformation}}</dd>
+    </dl>
+    <hr>
+  </div>
+  <div>
+    <h4>Roles</h4>
+    <hr>
+    <dl class="dl-horizontal">
+      <dt>Application roles</dt>
+      <dd></dd>
+      <dd></dd>
+      <dt>Functional roles</dt>
+      <dd></dd>
+      <dd></dd>
+    </dl>
+    <hr>
+  </div>
+  <div>
+    <h4>Customers</h4>
+    <hr>
+    <dl class="dl-horizontal">
+      <dt></dt>
+      <dd></dd>
+    </dl>
+    <hr>
+  </div>
+  <div>
+    <h4>Business unit managers</h4>
+    <hr>
+    <dl class="dl-horizontal">
+      <dt></dt>
+      <dd></dd>
+    </dl>
+    <hr>
+  </div>
+  <div>
+    <h4>Competence leaders</h4>
+    <hr>
+    <dl class="dl-horizontal">
+      <dt></dt>
+      <dd></dd>
+    </dl>
+    <hr>
+  </div>
+  <div>
+    <h4>Practice managers</h4>
+    <hr>
+    <dl class="dl-horizontal">
+      <dt></dt>
+      <dd></dd>
+    </dl>
+    <hr>
+  </div>
+  <div>
+    <h4>Coaches</h4>
+    <hr>
+    <dl class="dl-horizontal">
+      <dt></dt>
+      <dd></dd>
+    </dl>
+    <hr>
+  </div>
+  <div>
+    <h4>Skill competences</h4>
+    <hr>
+    <dl class="dl-horizontal">
+      <dt></dt>
+      <dd></dd>
+    </dl>
+  </div>
 
-<div ng-show="isBum || isCompetenceLeader || isPracticeManager || isCoach">
-  <h4>My users</h4>
+  <div>
+    <h4>Credentials</h4>
+    <hr>
+    <button ng-click="modifyMyCredentials()">Modify</button>
+    <hr>
+  </div>
+</div>
+
+<!--<div ng-show="isBum || isCompetenceLeader || isPracticeManager || isCoach">
+  <h4>My descendants</h4>
   <hr>
   <p ng-repeat="myUser in myUsers">
     User {{$index + 1}}: {{myUser.firstName}} {{myUser.lastName}} from {{myUser.unit}}
   </p>
-</div>
+</div>-->
+
+<!--
+_links (get stuff):
+
+bussinessUnitManagers
+coaches
+competenceLeaders
+customers
+practiceManagers
+roles
+self: href
+-->
